<resources>
    <string name="app_name">Story App</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="you_have_an_account">You have an account?</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="create_a_post">Create a Post</string>
    <string name="rotate_camera">Rotate Camera</string>
    <string name="image_preview">image_preview</string>
    <string name="application_logo">Application Logo</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="retry">Retry</string>
    <string name="use_current_location">Use current location</string>
    <string name="locationFormat">Use current location : \n %1$s</string>
    <string name="dateFormat">Uploaded on %1$s</string>
</resources>