<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/logo_register"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginVertical="16dp"
            android:contentDescription="@string/application_logo"
            android:src="@drawable/ic_baseline_photo_library_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorPrimary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="0"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_register"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.arya.submission3.ui.customview.EmailEditText
            android:id="@+id/ed_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_register_name"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large">

        </com.arya.submission3.ui.customview.EmailEditText>

        <com.arya.submission3.ui.customview.PasswordEditText
            android:id="@+id/ed_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_register_email"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large">

        </com.arya.submission3.ui.customview.PasswordEditText>

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:alpha="0"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_password" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="32dp"
            android:alpha="0"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_register" />

        <TextView
            android:id="@+id/tv_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="0"
            android:text="@string/you_have_an_account"
            app:layout_constraintEnd_toStartOf="@+id/button_to_login"
            app:layout_constraintTop_toBottomOf="@+id/materialDivider" />

        <Button
            android:id="@+id/button_to_login"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialDivider" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>