<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.add.AddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.card.MaterialCardView
            style="?attr/materialCardViewElevatedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/detail_photo"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:contentDescription="@string/image_preview"
                        android:scaleType="centerCrop" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:layout_margin="16dp">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_camera"
                            style="@style/Widget.Material3.Button.IconButton.Filled"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            app:icon="@drawable/ic_round_camera_alt_24" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_gallery"
                            style="@style/Widget.Material3.Button.IconButton.Filled"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:icon="@drawable/ic_baseline_photo_library_24" />

                    </LinearLayout>


                </FrameLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="?attr/materialCardViewElevatedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ed_add_description"
                    style="?attr/textInputOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="start"
                        android:lines="5" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/sw_add_location"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:enabled="false"
                    android:text="@string/use_current_location"
                    app:layout_constraintTop_toBottomOf="@+id/ed_add_description" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/upload"
            android:textAllCaps="true"
            app:layout_constraintTop_toBottomOf="@+id/sw_add_location"
            tools:layout_editor_absoluteX="16dp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>