<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.detail.DetailFragment">

    <com.google.android.material.card.MaterialCardView
        style="?attr/materialCardViewElevatedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/detail_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_preview"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_launcher_background"
                android:transitionName="trans_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/detail_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:transitionName="trans_name" />

                <TextView
                    android:id="@+id/detail_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/app_name"
                    android:textAppearance="?attr/textAppearanceLabelMedium" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    app:dividerColor="?android:attr/colorAccent"
                    app:dividerThickness="1dp" />

                <TextView
                    android:id="@+id/detail_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/detail_btn"
                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/maps"
                    android:visibility="gone"
                    app:icon="@drawable/ic_round_map_24" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.core.widget.NestedScrollView>